--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
